Small style improvements.

--- a/to-do/src/Components/Todoitem/Styles/ToDoItemStyles.css
+++ b/to-do/src/Components/Todoitem/Styles/ToDoItemStyles.css
@@ -1,7 +1,11 @@
 .Card{
-    box-shadow:  0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow:  3px 4px 8px 3px rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
+    border-width: 2px 2px 2px 2px;
+    border-color: rgba(0, 0, 0, 0.2);
+    width: 30%;
+    margin: 10px 10px;
 }
 
 .Card:hover{
